--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Webpage Title</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
+<body>
+   <h1>Talhas coding achievments</h1>
+   <h2>im a web developper</h2>
+    <hr/>
+    <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie ranking project</a></h3>
+    <img src="./public/image.png" width="300"/>
+    <hr/>
+    <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday invite project</a></h3>
+    <img src="./assets/images/birthday-invite.png" width="300"/>
+</body>
+</html>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
+<done></done>
 <!-- TODO 4: Add titles/subtitles etc. -->
-
+<no></no>
 <!-- TODO 5: Add a link to the project pages -->
-
+<alr done></alr>
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
+<alr done></alr>
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<a href="./public/about.html">About Me</a>
+<br/>
+<a href="./public/contact.html">Contact Me</a>
+<br/>
+
+<p>THANK U FOR READING UR THE FIRST PERSONNN!!!!</p>
+
+<hr/>
+<p>...</p>
+
+
