--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talha Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 </head>
 
 
